# doorman

./: .cvsignore  Makefile.am  README  configure.in
po/: .cvsignore
src/: .cvsignore  Makefile.am  doorman.c  doorman.glade  doorman.h  file.c  file.h  glade-strings.c  the-machine.c  theme-page-background.c  theme-page-desktop.c  theme-page-gtk.c  theme-page-panel.c  theme-page-sawfish.c  theme-page.c  yet-another-night-at-algiers.c  you-are-not-your-cvs-commits-list.c
